# ambient-message-server

./: .env  .gitignore  Cargo.toml  appsettings.json  diesel.toml
.fleet/: run.json
crates/adapter/: Cargo.toml
crates/adapter/src/: api.rs  lib.rs
crates/adapter/src/controller/: user.rs
crates/adapters/: Cargo.toml  diesel.toml
crates/adapters/migrations/00000000000000_diesel_initial_setup/: up.sql
crates/adapters/migrations/2023-12-14-150622_users/: up.sql
crates/adapters/migrations/2023-12-14-191428_user/: down.sql
crates/adapters/src/: api.rs  db.rs  lib.rs
crates/adapters/src/api/: mod.rs
crates/adapters/src/api/chat/: chat_controllers.rs  mod.rs
crates/adapters/src/api/message/: message_controller.rs  message_payloads.rs  mod.rs
crates/adapters/src/api/shared/: app_state.rs  error_presenter.rs  mod.rs  routes.rs
crates/adapters/src/api/user/: chat_controllers.rs  mod.rs  user_controllers.rs  user_mappers.rs  user_payloads.rs  user_presenters.rs
crates/adapters/src/controller/: user.rs
crates/adapters/src/handlers/: mod.rs  user_authentication.rs
crates/adapters/src/services/: crypto.rs
crates/adapters/src/spi/: mod.rs  models.rs
crates/adapters/src/spi/chat/: chat_db_mapper.rs  chat_repository.rs  mod.rs
crates/adapters/src/spi/db/: db_connection.rs  db_mappers.rs  mod.rs  models.rs  schema.rs
crates/adapters/src/spi/message/: message_db_mapper.rs  message_repository.rs  mod.rs
crates/adapters/src/spi/repositories/: user_repository.rs
crates/adapters/src/spi/user/: chat_db_mapper.rs  db_connection.rs  db_mappers.rs  mod.rs  user_repository.rs
crates/adapters/src/spi/user_chat/: mod.rs  user_chat_db_mapper.rs  user_chat_repository.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/gateway/repositories/: user_repository.rs  user_repository_abstract.rs
crates/application/src/gateway/repository/: user.rs
crates/application/src/gateway/usecase/user/: create.rs
crates/application/src/mappers/: api_mapper.rs  db_mapper.rs  mod.rs
crates/application/src/repositories/: chat_repository_abstract.rs  message_repository_abstract.rs  mod.rs  user_repository_abstract.rs  userchat_repository_abstract.rs
crates/application/src/services/: crypto_service_abstract.rs  mod.rs
crates/application/src/shared/: app_error.rs
crates/application/src/usecases/: interfaces.rs  mod.rs
crates/application/src/usecases/chat/: create.rs  find.rs  mod.rs
crates/application/src/usecases/message/: get_messages.rs  mod.rs  send.rs
crates/application/src/usecases/user/: auth.rs  create.rs  create_user.rs  find.rs  get_all.rs  interfaces.rs  mod.rs
crates/application/src/usecases/user_chat/: create.rs
crates/application/src/utils/: error_handling_utils.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/db/: Cargo.toml  diesel.toml
crates/db/migrations/00000000000000_diesel_initial_setup/: up.sql
crates/db/migrations/2023-12-14-191428_user/: up.sql
crates/db/migrations/2023-12-26-172730_chat/: up.sql
crates/db/migrations/2023-12-26-175223_userchats/: down.sql  up.sql
crates/db/src/: db_connection.rs  lib.rs  models.rs  schema.rs
crates/db/src/db/: db_connection.rs  db_mappers.rs  mod.rs  models.rs  user.rs
crates/domain/: Cargo.toml
crates/domain/src/: api_error.rs  chat_entity.rs  claims.rs  error.rs  lib.rs  message_entity.rs  user.rs  user_chat_entity.rs  user_entity.rs
crates/domain/src/entities/: error.rs  user.rs
crates/domain/src/entity/: user.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: cli.rs  lib.rs  server.rs
crates/infrastructure/src/services/: crypto.rs  mod.rs  user_authentication.rs
crates/mongodb/: Cargo.toml
crates/mongodb/src/: lib.rs  message_model.rs  mongodb_connection.rs
crates/mongodb_db/: Cargo.toml
crates/mongodb_db/src/: message_model.rs  mongodb_connection.rs
migrations/2023-12-02-205041_users/: up.sql
migrations/2023-12-14-133058_users/: up.sql
src/: lib.rs  main.rs  user.rs
src/adapters/: dependency_injection.rs  mod.rs
src/adapters/services/: mod.rs  service_builder.rs  user_service.rs
src/adapters/spi/db/: db_connection.rs  mod.rs  schema.rs
src/application/: dependency_injection.rs  mod.rs
src/application/users/: mod.rs
src/application/users/handlers/: create_user_handler.rs  mod.rs
src/application/users/requests/: by_id_request.rs  create_user_request.rs  mod.rs
src/domain/: error.rs  mod.rs
src/domain/request/: request.rs
src/domain/user/: mod.rs  user.rs  user_repository.rs  user_repository_abstract.rs
src/infrastructure/: dependency_injection.rs  mod.rs
src/infrastructure/repositories/: user_repository.rs
