[package]
name = "ambient-message-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ambient-message-server"
path = "src/main.rs"

[lib]
name = "ambient_message_server_lib"
path = "src/lib.rs"


[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = "0.20.1"
futures-util = "0.3"
rand = "0.8.5"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "uuid"] }
dotenvy = "0.15.7"
mockall = "0.11.4"
readonly = "0.2.11"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.74"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
r2d2 = "0.8.10"
more-di = { version = "3.0.0", features = ["async"]}
mediator = "0.2.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tungstenite = "0.20.1"