[package]
name = "ambient-message-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/domain",
    "crates/application",
    "crates/db",
    "crates/adapters",
    "crates/infrastructure",
]

[dependencies]
infrastructure = { path = "crates/infrastructure" }

actix-web = "4.4.0"
dotenv = "0.15.0"