[package]
name = "ambient-message-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/domain",
    "crates/application",
    "crates/db",
    "crates/adapters",
    "crates/infrastructure",
    "crates/mongodb_db",
]

[dependencies]
infrastructure = { path = "crates/infrastructure" }

actix-web = "4.4.0"
dotenv = "0.15.0"
actix-cors = "0.6.5"
chrono = "0.4"
