[package]
name = "adapters"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
db = { path = "../db" }

actix-web = "4.4.0"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "uuid"] }
diesel_migrations = "2.1.0"
dotenv = "0.15"
uuid = { version = "1.6.1", features = ["serde"] }
thiserror = "1.0.51"
derive_more = { version = "0.99.17", features = ["display"] }
serde = { version = "1.0.193", features = ["derive"] }