[package]
name = "adapters"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
db = { path = "../db" }
mongodb_db = { path = "../mongodb_db" }

actix-web = { version = "4.4.1" }
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "uuid"] }
diesel_migrations = "2.1.0"
dotenv = "0.15"
uuid = { version = "1.6.1", features = ["serde"] }
thiserror = "1.0.51"
derive_more = { version = "0.99.17", features = ["display"] }
serde = { version = "1.0.193", features = ["derive"] }
actix-web-httpauth = "0.8.1"
futures = "0.3.30"
bcrypt = "0.15.0"
jsonwebtoken = "9.2.0"
chrono = "0.4.31"
anyhow = "1.0.79"
mongodb = {version = "2.8.0"}
log = "0.4.20"