[package]
name = "db"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
adapters = { path = "../adapters" }

diesel = { version = "2.1.4", features = ["postgres", "r2d2", "uuid"] }
diesel_migrations = "2.1.0"
dotenv = "0.15"
uuid = "1.6.1"