[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
adapters = { path = "../adapters" }
actix-web = "4.4.0"
actix-cors = {version = "0.6.5", features = ["draft-private-network-access"]}