[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
adapters = { path = "../adapters" }
db = { path = "../db" }
mongodb_db = { path = "../mongodb_db" }

actix-web = "4.4.1"
actix-cors = { version = "0.6.5", features = ["draft-private-network-access"] }
uuid = { version = "1.6.1", features = ["v4"] }
actix-web-httpauth = "0.8.1"
serde = { version = "1.0.193", features = ["derive"] }