[package]
name = "mongodb_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.8.0"
serde = { version = "1.0.195", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4"] }
bson = {version = "2.8.1", features = ["uuid-1"]}